fixed scrolltop display on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -222,7 +222,6 @@ img {
     height: 100%;
     width: 100%;
 }
-
 /* Preloader styles
 ----------------------------------------- */
 #loader-wrapper {
@@ -738,7 +737,6 @@ input:focus, textarea:focus {
     left: 0;
     color: #ffffff;
 }
-
 /* -----------------------------------------------
     Work Pages
 ------------------------------------------------*/
@@ -789,10 +787,7 @@ input:focus, textarea:focus {
 }
 @media (max-width: 600px) {
     .col-4 { width: 80%; }
-    .scrolltop {
-        bottom: 10px;
-        right: 10px;
-    }
+    .scrolltop { display: none; }
     .overlay { display: none; }
     .portfolio-item__img:hover img { opacity: 1; }
 }
@@ -809,9 +804,5 @@ input:focus, textarea:focus {
     .category__filter ul li {
         font-size: 10px;
         padding: 10px;
-    }
-    .scrolltop {
-        bottom: 8px;
-        right: 8px;
     }
 }
